@@ -1,6 +1,11 @@
 2012-12-12  Hani Benhabiles  <kroosec@gmail.com>
 
-	* src/gsad_omp.c (new_alert_omp, export_alert_omp, export_alerts_omp):
+	* src/gsad_omp.c (new_alert_omp): New function. Correcty typo in
+	changelog.
+
+2012-12-12  Hani Benhabiles  <kroosec@gmail.com>
+
+	* src/gsad_omp.c (new_alert, export_alert_omp, export_alerts_omp):
 	New functions.
 
 	* src/gsad_omp.h: Add headers accordingly.
